--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,47 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.22)
 
-project(WorkbenchScreens LANGUAGES CXX)
+project(WorkbenchScreens
+    VERSION 0.1.0
+    LANGUAGES CXX
+)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(${PROJECT_NAME})
+# Fetch FTXUI
+include(FetchContent)
 
-target_sources(${PROJECT_NAME}
-    PRIVATE
-        src/main.cpp
-        src/App.cpp
-        src/App.h
+set(FETCHCONTENT_UPDATES_DISCONNECTED ON)
+set(FETCHCONTENT_QUIET OFF)
+
+FetchContent_Declare(ftxui
+    GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui.git
+    GIT_TAG        v5.0.0
+    GIT_PROGRESS   TRUE
+    GIT_SHALLOW    TRUE
+    EXCLUDE_FROM_ALL
+)
+
+FetchContent_MakeAvailable(ftxui)
+
+file(GLOB_RECURSE WORKBENCH_SOURCES CONFIGURE_DEPENDS
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
+)
+
+add_executable(${PROJECT_NAME}
+    ${WORKBENCH_SOURCES}
 )
 
 target_include_directories(${PROJECT_NAME}
     PRIVATE
         src
+)
+
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+        ftxui::screen
+        ftxui::dom
+        ftxui::component
 )
